# libgp

./: CMakeLists.txt
examples/: CMakeLists.txt  gp_example_dense.cc  gp_example_train.cc  gp_example_train_time_add.cc
include/: gp.h  sampleset.h
src/: cov_se_iso.cc  cov_sum.cc  gp.cc  sampleset.cc
